Fixed static code analysis findings.